<resources>
    <string name="app_name">OnlineStoreKotlin</string>
    <string name="titre_app">Online Store</string>
    <string name="label_splash"> © Larade jean-philippe - 2021</string>
    <string name="et_hint_email_id">Enter your Email</string>
    <string name="et_hint_password">Enter your Password</string>
    <string name="et_hint_password_confirmation">Confirm your Password</string>
    <string name="et_hint_username">Enter your Username</string>
    <string name="account"><u>Do you have an account?</u></string>
    <string name="tosubscribe"> | <u>subscribe</u></string>
    <string name="create_account"> <u>CREATE ACCOUNT</u></string>
    <string name="welcome_to_home">Welcome to home !!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_amount">Enter amount</string>


</resources>