<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounsignup"
    tools:context=".SignUpLayout">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/accountprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="351dp"
        android:layout_height="29dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/create_account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="65dp"
        android:layout_marginTop="38dp"
        android:hint="@string/et_hint_email_id"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/sign_up_layout_edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:autofillHints=""
            android:background="@color/white"
            android:drawableRight="@drawable/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/et_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/et_textSize"
            app:layout_constraintTop_toBottomOf="@+id/iv_label_titre"
            tools:layout_editor_absoluteX="4dp"
            tools:text="abc@gmail.com" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:hint="@string/et_hint_username"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_email">

        <EditText
            android:id="@+id/sign_up_layout_edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:autofillHints=""
            android:background="@color/white"
            android:drawableRight="@drawable/account_box"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/et_textSize"
            app:layout_constraintTop_toBottomOf="@+id/iv_label_titre"
            tools:layout_editor_absoluteX="4dp"
            tools:text="Username" />


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_upass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:hint="@string/et_hint_password"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_username">

        <EditText
            android:id="@+id/sign_up_layout_edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:autofillHints=""
            android:background="@color/white"
            android:drawableRight="@drawable/password"
            android:inputType="textPassword"
            android:padding="@dimen/et_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/et_textSize"
            app:layout_constraintTop_toBottomOf="@+id/iv_label_titre"
            tools:layout_editor_absoluteX="4dp"
            tools:text="Password" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_upws"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:hint="@string/et_hint_password_confirmation"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_upass">

        <EditText
            android:id="@+id/sign_up_layout_edtConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:autofillHints=""
            android:background="@color/white"
            android:drawableRight="@drawable/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/et_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/et_textSize"
            app:layout_constraintTop_toBottomOf="@+id/iv_label_titre"
            tools:layout_editor_absoluteX="4dp"
            tools:text="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="8 characters,1 capital and a sign "
        app:layout_constraintBottom_toTopOf="@+id/sign_up_layout_btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/sign_upws"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/sign_up_layout_btnSubmit"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounded_button"
        android:text="SIGN UP"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_upws" />

    <TextView
        android:id="@+id/sign_up_layout_btn_TextLogin"
        android:layout_width="97dp"
        android:layout_height="23dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="Login"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_layout_btnSubmit" />


</androidx.constraintlayout.widget.ConstraintLayout>